--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "satyandra-softuvo/coinbase",
+    "name": "satyandra-soft/coinbase",
     "description": "Coinbase API library",
     "keywords": [ "bitcoin", "coinbase" ],
     "homepage": "http://coinbase.com",
